New Import List, more information on Branches and new documentation